# todo_test

./: .pre-commit-config.yml  docker-compose.yml
todo_service/: .env.sample  Dockerfile  alembic.ini  main.py  pyproject.toml
todo_service/config/: config.py  database.py
todo_service/migrations/: env.py  script.py.mako
todo_service/migrations/versions/: 43f5ce5951d0_task.py  a3a1a668b61e_description_of_changes.py
todo_service/src/applications/: task.py  todo.py  user.py
todo_service/src/domain/DTO/: task.py  user.py
todo_service/src/domain/models/: abstract_models.py  task.py  user.py
todo_service/src/infrastructure/repositories/: task.py  todo.py  user.py
todo_service/src/infrastructure/utils/: deps.py  utils.py
todo_service/src/interfaces/: auth.py  task.py  todo.py
